--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -16,7 +16,7 @@ pt-BR:
         user:
           <<: *default
           name: 'Nome'
-          email: 'Email'
+          email: 'E--mail'
           password: 'Senha'
           password_confirmation: 'Senha (confirmação)'
           
