--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,24 +1,32 @@
 pt-BR:
-    activerecord:
-      models:
-        user: 'Usuário'
+  activerecord:
+    models:
+      user: 'Usuário'
+      comment: 'Comentário'
 
-     attributes:
-        default: &default
-          created_at: 'Foi criado em'
-          updated_at: 'Foi atualizado em'
+    attributes:
+      default: &default
+        created_at: 'Criado em'
+        updated_at: 'Atualizado em'
 
-        post:
-          <<: *default
-          description: 'Descrição'
-          photo: 'Foto'
+      post:
+        <<: *default
+        description: 'Descrição'
+        photo: 'Foto'
 
-        user:
-          <<: *default
-          name: 'Nome'
-          email: 'E-mail'
-          password: 'Senha'
-          password_confirmation: 'Senha (confirmação)'
-          
-  
-  
+      comment:
+        <<: *default
+        body: 'Comentário'
+
+      user:
+        <<: *default
+        name: 'Nome'
+        email: 'Email'
+        password: 'Senha'
+        password_confirmation: 'Senha (confirmação)'
+
+  errors:
+    messages:
+      # Active Storage Validations
+      content_type_invalid: 'é um tipo de arquivo inválido'
+      file_size_out_of_range: 'tem %{file_size} mas o limite é 5 MB'
